--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <!-- Slide 1 -->
       <div class="carousel-item active">
         <div class="carousel-container">
-          <h2 class="animate__animated animate__fadeInDown">Bem vindo ao <span>Web Workers</span></h2>
+          <h2 class="animate__animated animate__fadeInDown">Bem vindo; <span>Web Workers</span></h2>
           <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
           
         </div>
